res/style.scss
/* ... */
.at_error {
    padding-top: 20px;
    padding-bottom: 20px;
    width: 500px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;

    & img {
        max-width: 500px;
        max-height: 400px;
    }
    & h2 {
        font-size: 200%;
        font-weight: 200;
    }

    & button,
    & p {
        margin-top: 10px;
    }

}

a[href$="/s"],
a[href$="/spoiler"] {
    cursor: default;
    background: #000!important;
    color: #000!important;
    line-height: 1.4;
    border: 1px solid black;
    padding-right: 1px;
}

a[href$="/s"]:hover,
a[href$="/spoiler"]:hover {
    color: #fff !important;
}

a[href$="/s"]::before,
a[href$="/spoiler"]::before {
    background: #FFF!important;
    color: #000!important;
    padding: 0px 1px;
    margin: 0px;
    margin-right: 1px;
    content: "Spoiler";
}

.loading {
    height: 200px;
    width: 500px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;

    & > .spinner,
    & > #textContainer {
        display: inline-block;
        vertical-align: middle;
    }

    & > #textContainer {
        margin-left: 20px;

        & > h2 {
            font-size: 150%;
            font-weight: 200;
        }

        & p {
            margin-top: 10px;
        }
    }
}

.spinner {
    margin: 100px auto;
    width: 32px;
    height: 32px;
    position: relative;
}

.cube1, .cube2 {
    background-color: #ff5500;
    width: 10px;
    height: 10px;
    position: absolute;
    top: 0;
    left: 0;

    -webkit-animation: cubemove 1.8s infinite ease-in-out;
    animation: cubemove 1.8s infinite ease-in-out;
}

.cube2 {
    -webkit-animation-delay: -0.9s;
    animation-delay: -0.9s;
}

@-webkit-keyframes cubemove {
    25% { -webkit-transform: translateX(22px) rotate(-90deg) scale(0.5) }
    50% { -webkit-transform: translateX(22px) translateY(22px) rotate(-180deg) }
    75% { -webkit-transform: translateX(0px) translateY(22px) rotate(-270deg) scale(0.5) }
    100% { -webkit-transform: rotate(-360deg) }
}

@keyframes cubemove {
    25% {
        transform: translateX(42px) rotate(-90deg) scale(0.5);
        -webkit-transform: translateX(42px) rotate(-90deg) scale(0.5);
    } 50% {
        /* Hack to make FF rotate in the right direction */
        transform: translateX(42px) translateY(42px) rotate(-179deg);
        -webkit-transform: translateX(42px) translateY(42px) rotate(-179deg);
    } 50.1% {
        transform: translateX(42px) translateY(42px) rotate(-180deg);
        -webkit-transform: translateX(42px) translateY(42px) rotate(-180deg);
    } 75% {
        transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
        -webkit-transform: translateX(0px) translateY(42px) rotate(-270deg) scale(0.5);
    } 100% {
        transform: rotate(-360deg);
        -webkit-transform: rotate(-360deg);
    }
}

#at_switchtogplus,
#at_switchtoreddit {
    position: absolute;
    top: 20px;
    right: 0;
    opacity: 0.5;
    cursor: pointer;
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size: 13px;

    &.noresults {
        pointer-events: none;
    }

    &:hover {
        opacity: 0.8;
    }

    &:active {
        opacity: 1;
    }

    & svg {
        width: 24px;
        height: 24px;
        display: inline-block;
    }

    & span {
        vertical-align: top;
        line-height: 24px;
    }
}

#at_switchtoreddit {
    display: none;
    position: static;
    margin-top: 10px;
    margin-right: 10px;
    float: right;
}

body.darkmode {
    & #alientube {
        background: #242424 !important;
        color: #fff;

        & .at_tab {
            background: linear-gradient(rgb(65, 65, 65) 0px, rgb(46, 46, 46) 100%);
            border: 1px solid rgb(46, 46, 46);
            text-shadow: none;
            color: #fff;

            &.active {
                background: #242424;
                border: 1px solid rgb(46, 46, 46);
                border-bottom: none;
            }
        }

        & #at_overflow {
            background-image: linear-gradient(rgb(65, 65, 65) 0px, rgb(60, 60, 60) 100%);
            border: 1px solid rgb(46, 46, 46);

            &:hover {
                background-image: rgb(87, 87, 87);
            }

            & ul {
                background: #262626;
            }
        }

        & .at_score,
        & .at_commentcontent > span > p {
            color: #f6f6f6 !important;
        }

        & article.deleted > .at_commentmain > .at_commentcontent {
            background: rgb(79, 79, 79);
        }
    }

    & #at_switchtogplus svg,
    & #at_switchtoreddit svg {
        fill: #fff;
    }
}

